--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,11 @@ section {
 }
 
 h2 {
-    color: #fff; /* Change heading color to white */
+    color: #fff; /* Change heading color to black */
 }
 
 p {
-    color: #fff; /* Change paragraph text color to white */
+    color: #fff; /* Change paragraph text color to black */
 }
 
 footer {
