--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     color: #000; /* Change font color to black */
     background-color: #000; /* Keep background color black */
-    background-image: url('https://png.pngtree.com/background/20230618/original/pngtree-stellar-crypto-s-ascending-korean-market-a-3d-rendered-chart-for-picture-image_3756754.jpg'); /* Keep the background image */
+    background-image: url('https://static.vecteezy.com/system/resources/previews/012/574/345/non_2x/mint-leaves-icons-leaf-illustration-green-mint-leaves-ecology-nature-element-icon-leaf-icon-mint-leaves-logo-illustration-vector.jpg'); /* Keep the background image */
     background-size: cover;
     background-position: center;
 }
